app: Add display of hostname in page title

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />")
 </head>
 <body>
-  <p><a href=".">[Home]</a> <a href="http://peter-pi400-desktop.local:6052">[ESPhome]</a></p>
+  <p>{{ hostname }}: <a href=".">[Home]</a> <a href="http://peter-pi400-desktop.local:6052">[ESPhome]</a></p>
   <hl>
 
   <h1>{{ title }}</h1>
