app: Split index.html into separate template files
Also added macro for creating tables.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
-    <!--
-         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-         -->
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />")
-</head>
-<body>
-  <p>{{ hostname }}: <a href=".">[Home]</a> <a href="http://peter-pi400-desktop.local:6052">[ESPhome]</a></p>
-  <hl>
+{% extends "base.html" %}
 
-  <h1>{{ title }}</h1>
+{% block title %}Home Page{% endblock %}
 
+{% block content %}
+   <p>{{ content }}</p>
+   <h1>Overview</h1>
 
-    <p>{{ content }}</p>
-
+   <p>Details of ESP Device</p>
     <!-- Button to trigger Python script -->
     <form action="/esp-status" method="post">
         <button type="submit">Get ESP Status</button>
@@ -32,6 +21,12 @@
           </pre>
         </p>
     {% endif %}
+{% endblock %}
 
-</body>
-</html>
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+{% endblock %}
+
+{% block extra_js %}
+    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+{% endblock %}
