--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,7 @@
 
 {% block title %}About{% endblock %}
 
+{% set content = data.content %}
 {% block content %}
    <p>{{ content }}</p>
    <h1>About</h1>
